--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="csHmDRqsk4nd_Yr0-bObP27B824PxMW1uhS3anKG-I8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Discover the amazing features of Minecraft Pocket Edition, the ultimate mobile gaming experience. Learn why it's a must-have for gamers of all ages.">
   <meta name="keywords" content="Minecraft Pocket Edition, Minecraft PE, Minecraft Bedrock Edition, mobile gaming, Minecraft tips">
   <title>Minecraft Pocket Edition: The Ultimate Mobile Gaming Experience</title>
   <meta name="robots" content="index, follow">
   <link rel="icon" href="icon.png" type="image/x-icon">
-    <link rel="canonical" href="">
-    <link rel="alternate" hreflang="en" href="">
+    <link rel="canonical" href="https://fulfledgedgame.bitbucket.io/">
+    <link rel="alternate" hreflang="en" href="https://fulfledgedgame.bitbucket.io/">
     
     <script type="application/ld+json">
         {
@@ -17,7 +18,7 @@
             "@type": "WebPage",
             "name": "Minecraft Pocket Edition: The Ultimate Mobile Gaming Experience",
             "description": "Discover the amazing features of Minecraft Pocket Edition, the ultimate mobile gaming experience. Learn why it's a must-have for gamers of all ages.",
-            "url": ""
+            "url": "https://fulfledgedgame.bitbucket.io/"
         }
         </script>
   <style>
